lawndisorder/client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lawndisorder-client-service
spec:
  # type: NodePort
  selector:
    app: lawndisorder-client
  ports:
    # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 80
      targetPort: 80
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      # nodePort: 30007
